--- a/public/chat.html
+++ b/public/chat.html
@@ -41,41 +41,6 @@
                     repudiandae.
                 </p>
             </div>
-            <div class="message">
-                <p class="meta">Mary <span>9:15pm</span></p>
-                <p class="text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-                    repudiandae.
-                </p>
-            </div>
-            <div class="message">
-                <p class="meta">Mary <span>9:15pm</span></p>
-                <p class="text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-                    repudiandae.
-                </p>
-            </div>
-            <div class="message">
-                <p class="meta">Mary <span>9:15pm</span></p>
-                <p class="text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-                    repudiandae.
-                </p>
-            </div>
-            <div class="message">
-                <p class="meta">Mary <span>9:15pm</span></p>
-                <p class="text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-                    repudiandae.
-                </p>
-            </div>
-            <div class="message">
-                <p class="meta">Mary <span>9:15pm</span></p>
-                <p class="text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-                    repudiandae.
-                </p>
-            </div>
         </div>
       </main>
       <div class="chat-form-container">
@@ -91,7 +56,8 @@
         </form>
       </div>
     </div>
-  
+    
+    <script src="/socket.io/socket.io.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
