style: refine sidebar styles, tweak UI, and apply hashed user colors

--- a/public/chat.html
+++ b/public/chat.html
@@ -18,7 +18,10 @@
           <h3><i class="fas fa-comments"></i> Room Name:</h3>
           <h2 id="room-name"></h2>
           <h3><i class="fas fa-users"></i> Users</h3>
-          <ul id="users"></ul>
+          <div class="user-list-container">
+            <p id="active-user" class="user-item active-user"></p>
+            <ul id="user-list"></ul>
+          </div>
         </div>
         <div class="chat-messages"></div>
       </main>
