--- a/public/chat.html
+++ b/public/chat.html
@@ -11,7 +11,7 @@
     <div class="chat-container">
       <header class="chat-header">
         <h1><i class="fas fa-bath"></i> Realtime Chat</h1>
-        <a href="index.html" class="btn">Leave Room</a>
+        <a href="/" class="btn">Leave Room</a>
       </header>
       <main class="chat-main">
         <div class="chat-sidebar">
@@ -34,7 +34,7 @@
             required
             autocomplete="off"
           />
-          <button class="btn"><i class="fas fa-paper-plane"></i> Send</button>
+          <button class="btn" id="submit-btn" disabled><i class="fas fa-paper-plane"></i> Send</button>
         </form>
       </div>
     </div>
