--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 				<h1><i class="fas fa-bath"></i> Realtime Chat</h1>
 			</header>
 			<main class="join-main">
-				<form action="chat" id="main-form">
+				<form id="main-form">
 					<div class="form-control">
 						<label for="username">Username</label>
 						<input
@@ -37,6 +37,7 @@
 							name="room" 
 							id="room"
 							placeholder="Enter room code..."
+							maxlength="4" minlength="4"
 						/>
 					</div>
 					<div class="button-container">
