--- a/public/chat.html
+++ b/public/chat.html
@@ -11,7 +11,7 @@
     <div class="chat-container">
       <header class="chat-header">
         <h1><i class="fas fa-bath"></i> Realtime Chat</h1>
-        <a href="/" class="btn">Leave Room</a>
+        <button class="btn" id="leave-btn">Leave Room</button>
       </header>
       <main class="chat-main">
         <div class="chat-sidebar">
