--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 			integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="/css/style.css" />
 		<title>Realtime Chat</title>
 	</head>
 	<body>
@@ -48,6 +48,6 @@
 			</main>
 		</div>
 		<script src="/socket.io/socket.io.js"></script>
-		<script src="js/index.js"></script>
+		<script src="/js/index.js"></script>
 	</body>
 </html>
