--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="/css/style.css" />
+		<link rel="stylesheet" href="/css/index.css" />
 		<title>Realtime Chat</title>
 	</head>
 	<body>
