refactor: update URL handling and error management

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 			integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
 			crossorigin="anonymous"
 		/>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 		<link rel="stylesheet" href="/css/style.css" />
 		<link rel="stylesheet" href="/css/index.css" />
 		<title>Realtime Chat</title>
