feat/username-required-with-animation

--- a/public/error.html
+++ b/public/error.html
@@ -22,7 +22,7 @@
             <h3 id="error-msg"></h3>
         </header>
         <main class="error-main">
-            <p id="error-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, cum dolorum, unde vel a asperiores quisquam deserunt aspernatur amet tenetur modi! Nesciunt eius esse ipsa numquam ad animi vitae itaque!</p>
+            <p id="error-description" class="disable-this">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, cum dolorum, unde vel a asperiores quisquam deserunt aspernatur amet tenetur modi! Nesciunt eius esse ipsa numquam ad animi vitae itaque!</p>
             <h3>Redirected in <span id="countdown">3</span></h3>
             <button type="button" class="btn" id="go-home-btn" onclick="window.location.href='/'">Go Back</button>
         </main>
