--- a/public/chat.html
+++ b/public/chat.html
@@ -7,9 +7,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/chat.css">
+    <link rel="stylesheet" href="/css/modal.css">
   <title>Realtime Chat</title>
 </head>
 <body>
+    <div id="username-modal" class="modal disable-this">
+      <div class="modal-elements">
+        <h2>Enter a username</h2>
+        <form class="username-form" id="username-form">
+          <input type="text" id="username-input" placeholder="Enter your username">
+          <button type="submit" class="btn" id="submit-username">Join</button>
+        </form>
+      </div>
+    </div>
     <div class="chat-container">
       <header class="chat-header">
         <h1><i class="fas fa-bath"></i> Realtime Chat</h1>
