--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+		<link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 		<link rel="stylesheet" href="/css/style.css" />
 		<link rel="stylesheet" href="/css/index.css" />
 		<title>Realtime Chat</title>
@@ -18,7 +19,7 @@
 	<body>
 		<div class="join-container">
 			<header class="join-header">
-				<h1><i class="fas fa-bath"></i> Realtime Chat</h1>
+				<h1><i class="fas fa-comments"></i> Realtime Chat</h1>
 			</header>
 			<main class="join-main">
 				<form id="main-form">
