--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+		<link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 		<link rel="stylesheet" href="/css/style.css" />
 		<link rel="stylesheet" href="/css/index.css" />
 		<title>Realtime Chat</title>
