feat: add step-by-step instructions on the homepage

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,18 @@
 				</form>
 			</main>
 		</div>
+		<div class="instructions-container">
+			<div class="instructions-header">
+				<h1><i class="fas fa-search"></i> How to chat?</h1>
+			</div>
+			<div class="instructions-main">
+				<ol class="steps">
+					<li class="step-item">Enter a username.</li>
+					<li class="step-item">Click on "Create Room" to start a new room. 😅</li>
+					<li class="step-item">Or enter a room code and click "Join Room" to join an existing one. 🎉</li>
+				</ol>
+			</div>
+		</div>
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="/js/index.js"></script>
 	</body>
