--- a/public/chat.html
+++ b/public/chat.html
@@ -35,7 +35,11 @@
       <main class="chat-main">
         <div class="chat-sidebar">
           <h3><i class="fas fa-hashtag"></i> Room Code</h3>
-          <h2 id="room-name"></h2>
+          <div class="room-name-container">
+            <h2 id="room-name"></h2>
+            <p class="check-icon">✅</p>
+            <button class="copy-btn disable-this" id="copy-btn">📋</button>
+          </div>
           <h3><i class="fas fa-users"></i> Users</h3>
           <div class="user-list-container">
             <p id="active-user" class="user-item active-user"></p>
