--- a/public/chat.html
+++ b/public/chat.html
@@ -30,37 +30,46 @@
     <div class="chat-container">
       <header class="chat-header">
         <h1><i class="fas fa-comments"></i> Realtime Chat</h1>
-        <button class="btn" id="leave-btn">Leave Room</button>
+        <!-- <button class="btn" id="leave-btn">Leave Room</button> -->
       </header>
       <main class="chat-main">
         <div class="chat-sidebar">
-          <h3><i class="fas fa-hashtag"></i> Room Code</h3>
-          <div class="room-name-container">
-            <h2 id="room-name"></h2>
-            <p class="check-icon">✅</p>
-            <button class="copy-btn disable-this" id="copy-btn">📋</button>
+          <div class="sidebar-data">
+            <div class="room-data">
+              <h3><i class="fas fa-hashtag"></i> Room Code</h3>
+              <div class="room-code-container">
+                <h2 id="room-name"></h2>
+                <p class="check-icon">✅</p>
+                <button class="copy-btn disable-this" id="copy-btn">📋</button>
+              </div>
+            </div>
+            <div class="users-data">
+              <h3><i class="fas fa-users"></i> Users</h3>
+              <div class="user-list-container">
+                <p id="active-user" class="user-item active-user"></p>
+                <ul id="user-list"></ul>
+              </div>
+            </div>
           </div>
-          <h3><i class="fas fa-users"></i> Users</h3>
-          <div class="user-list-container">
-            <p id="active-user" class="user-item active-user"></p>
-            <ul id="user-list"></ul>
+          <button class="btn leave-btn" id="leave-btn"><i class="fas fa-sign-out-alt"></i> Leave Room</button>
+        </div>
+        <div class="chat-main-part">
+          <div class="chat-messages"></div>
+          <div class="chat-form-container">
+            <form id="chat-form">
+              <input
+                id="msg"
+                type="text"
+                placeholder="Enter Message"
+                required
+                autocomplete="off"
+              />
+              <button class="btn" id="submit-btn" disabled><i class="fas fa-paper-plane"></i> Send</button>
+            </form>
           </div>
         </div>
-        <div class="chat-messages"></div>
-      </main>
-      <div class="chat-form-container">
-        <form id="chat-form">
-          <input
-            id="msg"
-            type="text"
-            placeholder="Enter Message"
-            required
-            autocomplete="off"
-          />
-          <button class="btn" id="submit-btn" disabled><i class="fas fa-paper-plane"></i> Send</button>
-        </form>
       </div>
-    </div>
+      </main>
     <script 
       src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.13.1/qs.min.js" integrity="sha512-dOI8+lI91wsLJEMBQcZBvatYrawv84SrgkRF/6sIcjhYXgANOvOEkBtCSf/ZkdZ7Mw0u+VUxDgalDZA1qKWTFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"
     ></script> <!--query selector-->
