--- a/public/error.html
+++ b/public/error.html
@@ -17,16 +17,17 @@
     <title>Oops...</title>
 </head>
 <body>
-    <div class="error-container">
-        <header class="error-header">
-            <h1 id="error-code"></h1>
-            <h3 id="error-msg"></h3>
-        </header>
-        <main class="error-main">
-            <p id="error-description" class="disable-this">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, cum dolorum, unde vel a asperiores quisquam deserunt aspernatur amet tenetur modi! Nesciunt eius esse ipsa numquam ad animi vitae itaque!</p>
-            <h3>Redirected in <span id="countdown">3</span></h3>
-            <button type="button" class="btn" id="go-home-btn" onclick="window.location.href='/'">Go Back</button>
-        </main>
+    <div class="main-container">
+        <div class="error-container">
+            <header class="error-header">
+                <h1 id="error-code"></h1>
+                <h3 id="error-msg"></h3>
+            </header>
+            <main class="error-main">
+                <p>Redirected in <span id="countdown">3</span></p>
+                <button type="button" class="btn" id="go-home-btn" onclick="window.location.href='/'">Go Back</button>
+            </main>
+        </div>
     </div>
     <script src="/js/error.js"></script>
 </body>
