fix: cleanup leftover merge changes

--- a/public/chat.html
+++ b/public/chat.html
@@ -37,7 +37,7 @@
         </div>
       </header>
       <main class="chat-main">
-        <div class="users-container" style="display: flex;">
+        <div class="users-container" style="display: none;">
           <div class="user-list-container">
             <p id="active-user" class="user-item active-user"></p>
             <ul id="user-list"></ul>
