feat: add typing indicator and clear rooms on server start

--- a/public/chat.html
+++ b/public/chat.html
@@ -63,6 +63,7 @@
         </div>
         <div class="chat-main-part">
           <div class="chat-messages"></div>
+          <div class="typing-container"></div>
           <div class="chat-form-container">
             <form id="chat-form">
               <input
