feat: complete typing indicator functionality
With proper user display and removal

--- a/public/chat.html
+++ b/public/chat.html
@@ -63,7 +63,9 @@
         </div>
         <div class="chat-main-part">
           <div class="chat-messages"></div>
-          <div class="typing-container"></div>
+          <div class="typing-container">
+            <p class="typing"></p>
+          </div>
           <div class="chat-form-container">
             <form id="chat-form">
               <input
